# rdf2parquet

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: FORMAT.md
example_scripts/: rdfParser.js  rdfParser.test.js  rdf_parser.py  test_rdf_parser.py
include/rdf2parquet/: parquet_read.hpp  parquet_write.hpp  rdf_model.hpp  rdf_parser.hpp
plan/: rdf2parquet-cpp-1.md
public/rw-sample-data/: README.md  sample_commands.bat  sample_subset.rdf  sample_traces.rdf
src/: main.cpp  parquet_read.cpp  parquet_write_common.hpp  parquet_write_long.cpp  parquet_write_wide.cpp  rdf_parser.cpp
tests/: test_cli.cpp  test_rdf_parser.cpp  test_write_long.cpp  test_write_wide.cpp
tests/fixtures/: README.md
tools/: crosscheck.py
